[gd_scene load_steps=26 format=3 uid="uid://c5wrcu50key4v"]

[ext_resource type="Texture2D" uid="uid://be1mpfib1akpt" path="res://ui/menu/frames/PlayerMenu.png" id="1_484sp"]
[ext_resource type="Script" uid="uid://ch1ickfq0o2yn" path="res://ui/menu/frames/playerMenuSlot.gd" id="1_kebrx"]
[ext_resource type="FontFile" uid="uid://bxm5isfgrapdr" path="res://assets/fonts/OMORI_GAME2.ttf" id="2_ihwpp"]
[ext_resource type="Texture2D" uid="uid://ba1lwtlmr45qy" path="res://ui/menu/health/healthBar.png" id="3_c0vjp"]
[ext_resource type="Texture2D" uid="uid://ce74yu1p3ey3c" path="res://ui/menu/health/juiceBar.png" id="4_kebrx"]
[ext_resource type="Texture2D" uid="uid://c80t8pjx3sn4f" path="res://assets/faces/brenna/brenna_neutral_highres.png" id="6_wi3ba"]
[ext_resource type="Texture2D" uid="uid://c7nlbjd1tfuxy" path="res://assets/dialog/name.png" id="7_qi3os"]
[ext_resource type="Texture2D" uid="uid://cdu7go104cnp0" path="res://assets/dialog/faces/fa_luke_neutral.png" id="7_qyydf"]
[ext_resource type="Texture2D" uid="uid://cl2i7f2b8j2m0" path="res://assets/faces/luke/luke_neutral.png" id="7_wywod"]
[ext_resource type="Texture2D" uid="uid://dcy2vybcd4vtw" path="res://ui/redPointerDown.png" id="8_wi3ba"]
[ext_resource type="Texture2D" uid="uid://cvwpmxwbghf8j" path="res://assets/dialog/tag_cursor.png" id="9_wi3ba"]

[sub_resource type="LabelSettings" id="LabelSettings_ihwpp"]
font = ExtResource("2_ihwpp")
font_size = 22
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_ihwpp"]
colors = PackedColorArray(0.168627, 0, 0.478431, 1, 0.890196, 0.545098, 0.952941, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c0vjp"]
gradient = SubResource("Gradient_ihwpp")
width = 148
height = 17
fill_from = Vector2(0, 1)
fill_to = Vector2(1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mcyh5"]
font = ExtResource("2_ihwpp")
font_size = 28
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c0vjp"]
font = ExtResource("2_ihwpp")
font_size = 19
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfsyn"]
atlas = ExtResource("6_wi3ba")
region = Rect2(0, 0, 900, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_otigh"]
atlas = ExtResource("6_wi3ba")
region = Rect2(900, 0, 900, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_72fec"]
atlas = ExtResource("6_wi3ba")
region = Rect2(1800, 0, 900, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyydf"]
atlas = ExtResource("7_wywod")
region = Rect2(0, 0, 900, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h7rw"]
atlas = ExtResource("7_wywod")
region = Rect2(900, 0, 900, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ndv6"]
atlas = ExtResource("7_wywod")
region = Rect2(1800, 0, 900, 900)

[sub_resource type="AtlasTexture" id="AtlasTexture_26ar0"]
atlas = ExtResource("7_wywod")
region = Rect2(0, 0, 900, 900)

[sub_resource type="SpriteFrames" id="SpriteFrames_qi3os"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfsyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otigh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72fec")
}],
"loop": true,
"name": &"brenna",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfsyn")
}],
"loop": true,
"name": &"brenna_still",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"fa_brenna",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"fa_brenna_still",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_qyydf")
}],
"loop": true,
"name": &"fa_luke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_qyydf")
}],
"loop": true,
"name": &"fa_luke_still",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyydf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h7rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ndv6")
}],
"loop": true,
"name": &"luke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26ar0")
}],
"loop": true,
"name": &"luke_still",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_wywod"]
font = ExtResource("2_ihwpp")
font_size = 23
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="Player1" type="Node2D"]
process_mode = 3
script = ExtResource("1_kebrx")

[node name="Frame" type="TextureRect" parent="."]
offset_left = -76.0
offset_top = -56.0
offset_right = 76.0
offset_bottom = 56.0
texture = ExtResource("1_484sp")
metadata/_edit_use_anchors_ = true

[node name="Level" type="Label" parent="Frame"]
layout_mode = 0
offset_left = 13.0
offset_top = 39.0
offset_right = 66.0
offset_bottom = 62.0
text = "LVL. 30"
label_settings = SubResource("LabelSettings_ihwpp")
metadata/_edit_use_anchors_ = true

[node name="LevelBar" type="TextureRect" parent="Frame/Level"]
show_behind_parent = true
layout_mode = 0
offset_left = -11.0
offset_top = 2.0
offset_right = 137.0
offset_bottom = 19.0
texture = SubResource("GradientTexture2D_c0vjp")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Name" type="Label" parent="Frame"]
layout_mode = 0
offset_left = 9.0
offset_top = 4.0
offset_right = 145.0
offset_bottom = 35.0
text = "OMori"
label_settings = SubResource("LabelSettings_mcyh5")
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="healthBar" type="TextureProgressBar" parent="Frame"]
layout_mode = 0
offset_left = 30.0
offset_top = 66.0
offset_right = 143.0
offset_bottom = 78.0
value = 100.0
texture_progress = ExtResource("3_c0vjp")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Frame/healthBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0833333
anchor_bottom = 0.0833333
offset_left = 6.0
offset_top = -5.0
offset_right = 110.0
offset_bottom = 15.0
text = "12/35"
label_settings = SubResource("LabelSettings_c0vjp")
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="juiceBar" type="TextureProgressBar" parent="Frame"]
layout_mode = 0
offset_left = 30.0
offset_top = 92.0
offset_right = 143.0
offset_bottom = 104.0
value = 100.0
texture_progress = ExtResource("4_kebrx")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Frame/juiceBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0833333
anchor_bottom = 0.0833333
offset_left = 6.0
offset_top = -5.0
offset_right = 110.0
offset_bottom = 15.0
text = "12/35"
label_settings = SubResource("LabelSettings_c0vjp")
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Face" type="AnimatedSprite2D" parent="Frame"]
show_behind_parent = true
position = Vector2(76, -52)
scale = Vector2(0.117, 0.117)
sprite_frames = SubResource("SpriteFrames_qi3os")
animation = &"fa_luke_still"

[node name="Select" type="NinePatchRect" parent="."]
visible = false
custom_minimum_size = Vector2(44, 0)
offset_left = -66.0
offset_top = -222.0
offset_right = 66.0
offset_bottom = -189.0
texture = ExtResource("7_qi3os")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Label" type="Label" parent="Select"]
layout_mode = 0
offset_left = 7.0
offset_top = 2.0
offset_right = 125.0
offset_bottom = 26.0
text = "Select Who?"
label_settings = SubResource("LabelSettings_wywod")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Sprite2D" type="Sprite2D" parent="Select"]
position = Vector2(66, 39)
texture = ExtResource("8_wi3ba")

[node name="TagSelect" type="TextureRect" parent="."]
visible = false
offset_left = -43.0
offset_top = -224.0
offset_right = 43.0
offset_bottom = -163.0
texture = ExtResource("9_wi3ba")
